--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,26 @@
-# Stage 0, "build-stage", based on Node.js, to build and compile the frontend
-FROM tiangolo/node-frontend:10 as build-stage
+# # Stage 1
+# FROM node:8 as react-build
+# WORKDIR /app
+# COPY . ./
+# RUN npm i
+# RUN npm run build
+
+# # Stage 2 - the production environment
+# FROM nginx:alpine
+# COPY nginx.conf /etc/nginx/conf.d/default.conf
+# COPY --from=react-build /app/build /usr/share/nginx/html
+# EXPOSE 80
+# CMD ["nginx", "-g", "daemon off;"]
+
+
+FROM mhart/alpine-node:11 AS builder
 WORKDIR /app
-COPY package*.json /app/
+COPY . .
 RUN npm install
-COPY ./ /app/
 RUN npm run build
 
-# Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
-FROM nginx:1.15
-COPY --from=build-stage /app/build/ /usr/share/nginx/html
-# Copy the default nginx.conf provided by tiangolo/node-frontend
-COPY --from=build-stage /nginx.conf /etc/nginx/conf.d/default.conf
+FROM mhart/alpine-node
+RUN npm i -g serve
+WORKDIR /app
+COPY --from=builder /app/build .
+CMD ["serve", "-p", "80", "-s", "."]
