--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-vertical-timeline-component": "^2.5.0",
     "@types/recharts": "^1.8.2",
     "bootstrap": "^4.3.1",
+    "node-sass": "^4.13.0",
     "dotenv": "^6.2.0",
     "lodash": "^4.17.15",
     "material-ui": "^0.20.2",
